# app/schemas.py
@@ -1,8 +1,10 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-04-12T22:10:46+00:00
+#   timestamp: 2026-04-20T01:06:49+00:00
 
 from __future__ import annotations
+
+from enum import Enum
 
 from pydantic import BaseModel, Field
 
@@ -43,6 +45,15 @@ class Rating(BaseModel):
 class Recommendation(BaseModel):
     productId: str | None = None
     score: float | None = None
+
+
+class SimilarityStrategy(Enum):
+    auto = 'auto'
+    jaccard = 'jaccard'
+    euclidean = 'euclidean'
+    pearson = 'pearson'
+    cosine = 'cosine'
+    matrix_factorization = 'matrix_factorization'
 
 
 class Error(BaseModel):
